--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,6 @@ spring:
   servlet:
     multipart:
       enabled: true
-      location: C:\\upload
+      location: src/main/upload/
       max-request-size: 30MB
       max-file-size: 10MB
