회원가입시 프로필사진
회원가입시 프로필 선택 가능, 선택 안 하면 프로필로 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,7 @@ com:
       userProfilePath: src/main/upload/user
       bannerPath: src/main/upload/banner
       prodecutPath : src/main/upload/product
+      bassics : src/main/upload/bassics
 
 application:
   security:
