페이징 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     username: BOOTUSER
     password: BOOTUSER
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
     properties:
