--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 node_modules
 /dist
-!**/src/test
-!**/src/main/upload
+src/test
+src/main/upload
 .gradle
 build
+src/main/resources/application.yml
+
 
 # local env files
 .env.local
